--- a/_layouts/ffc_layouts.html
+++ b/_layouts/ffc_layouts.html
@@ -9,12 +9,23 @@
   <img src="https://scontent.fbkk10-1.fna.fbcdn.net/v/t1.0-1/c18.18.221.221/s160x160/1170795_576457505726650_475839346_n.jpg?oh=5c5d2c6579c372e770d14ba4246f18c8&oe=583B9AC2"
   alt="W3Schools.com" width="150" height="142">
   <header>
-    <nav>FFCคืออะไร</nav>
-    <nav>ใครใช้</nav>
-    <nav>คุณสมบัติ</nav>
-    <nav>FAQ</nav>
-    <nav>ดาวน์โหลด</nav>
-    <nav>ติดต่อ</nav>
+    <nav>
+      <ul class="nav navbar-nav navbar-right">
+         <li>
+          <a href="#">FFCคืออะไร </a> </li>
+          <li>
+           <a href="#">ใครใช้ </a> </li>
+           <li>
+            <a href="#">คุณสมบัติ </a> </li>
+            <li>
+             <a href="#">FAQ </a> </li>
+             <li>
+              <a href="#">ดาวน์โหลด </a> </li>
+              <li>
+               <a href="#">ติดต่อ </a> </li>
+             </ul>
+    </nav>
+
   </header>
   <main>
 
