ทำหน้า FFCคืออะไรและก็หน้าใครใช้และก็คุณสมบัติ

--- a/_layouts/ffc-layouts.html
+++ b/_layouts/ffc-layouts.html
@@ -3,25 +3,71 @@
 <head>
     <meta charset="utf-8" />
     <title>{{ site.title }}</title>
+    <div style="background-color:#66FF66;color:white;padding:20px;">
+        <table>
+            <tr>
+                <td><img src="https://lh3.ggpht.com/OsDaHoxLg9MXmGskclOV6V3592KiFQICLv1Cac2RwIVgrv7q9D43ajfG82HNfY_8Gyw=w300-rw" <alt="FFC.com" width="150" height="142"></td>
+                <td>
+                    <h1 style="color:#6699FF;">FAMILY FOLDER <br>COLLECTOR</br></h1></td>
+
+                <td>
+                    <center>
+                        <p style="color:red;"><b>FFCบริการถึงหน้าบ้าน <span style="color:blue">เข้าถึงทุกครอบครัว</span> <span style="color:green">ดูแลสุขภาพในชุมชน</span></b></p>
+                </td>
+                </center>
+            </tr>
+        </table>
+    </div>
 </head>
 
 <body>
     <header>
-        <nav>
-            <a href="#">FFCคืออะไร</a>
-            <a href="#">ใครใช้</a>
-            <a href="#">คุณสมบัติ</a>
-            <a href="#">FAQ </a>
-            <a href="#">ดาวน์โหลด</a>
-            <a href="#">ติดต่อ</a>
-        </nav>
+        <div style="background-color:#66FF66;color:white;padding:20px;">
+
+            <table>
+                <tr>
+                    <td>
+                        <nav>
+                            <p align="center">
+                                &nbsp; <a href="#">FFCคืออะไร</a> &nbsp; <a href="#">ใครใช้</a> &nbsp; <a href="#">คุณสมบัติ</a> &nbsp; <a href="#">FAQ </a> &nbsp; <a href="#">ดาวน์โหลด</a> &nbsp; <a href="#">ติดต่อ</a>
+                            </p>
+                        </nav>
+                    </td>
+                </tr>
+            </table>
+            <style="background-color:powderblue;">
+        </div>
+        </style>
     </header>
 
     <main>
         {{ content }}
     </main>
+    <hr>
 
-    <footer>this is footer</footer>
+    <footer>
+        <center> <a href=" #">FFCคืออะไร</a> | <a href="#">คำถามที่พบบ่อย</a> | <a href="#">ติดต่อ</a>
+            <br>
+            <p>จำนวนผู้เข้าชมเว็บไซpต์</p>
+            </br>
+            <p>ที่อยู่ </p>
+
+            <p> อาคารศูนย์เทคโนโลยีรอิเล็กทรอนิกส์ (TMEC) </p>
+        </center>
+        <div id="social-bar">
+            <div style="width:60px;padding:5px 0 5px 2px;height:63px;">
+                <div class="fb-share-button fb_iframe_widget" data-type="box_count" fb-xfbml-state="rendered" fb-iframe-plugin-query="app_id=716713408352109&amp;container_width=60&amp;href=http%3A%2F%2F%2Ftha%2F&amp;locale=en_US&amp;sdk=joey&amp;type=box_count"><span style="vertical-align: bottom; width: 57px; height: 61px;"><iframe name="f2cb08b2f0149b" width="1000px" height="1000px" frameborder="0" allowtransparency="true" allowfullscreen="true" scrolling="no" title="fb:share_button Facebook Social Plugin" src="https://www.facebook.com/v2.0/plugins/share_button.php?app_id=716713408352109&amp;channel=http%3A%2F%2Fstaticxx.facebook.com%2Fconnect%2Fxd_arbiter%2Fr%2FP5DLcu0KGJB.js%3Fversion%3D42%23cb%3Df3c67de53f54edc%26domain%3Dwww.bu.ac.th%26origin%3Dhttp%253A%252F%252Fwww.bu.ac.th%252Ff9984cf38898b4%26relation%3Dparent.parent&amp;container_width=60&amp;href=http%3A%2F%2Fwww.bu.ac.th%2Ftha%2F&amp;locale=en_US&amp;sdk=joey&amp;type=box_count" style="border: none; visibility: visible; width: 57px; height: 61px;" class=""></iframe></span></div>
+            </div>
+            <div style="width:60px;padding:5px 0 5px 2px;height:63px;">
+                <iframe id="twitter-widget-0" scrolling="no" frameborder="0" allowtransparency="true" class="twitter-share-button twitter-share-button-rendered twitter-tweet-button" title="Twitter Tweet Button" src="http://platform.twitter.com/widgets/tweet_button.c6def25548e9590b13abaa1b3330b811.en.html#dnt=false&amp;id=twitter-widget-0&amp;lang=en&amp;original_referer=http%3A%2F%2Fwww.bu.ac.th%2Ftha%2F&amp;related=anywhereTheJavascriptAPI&amp;size=m&amp;text=%E0%B8%A1%E0%B8%AB%E0%B8%B2%E0%B8%A7%E0%B8%B4%E0%B8%97%E0%B8%A2%E0%B8%B2%E0%B8%A5%E0%B8%B1%E0%B8%A2%E0%B8%81%E0%B8%A3%E0%B8%B8%E0%B8%87%E0%B9%80%E0%B8%97%E0%B8%9E%20%7C%20BANGKOK%20UNIVERSITY&amp;time=1475031185635&amp;type=share&amp;url=http%3A%2F%2Fwww.bu.ac.th%2Ftha%2F"
+                    style="position: static; visibility: visible; width: 60px; height: 20px;"></iframe></div>
+            <div style="width:60px;padding:5px 0 5px 3px;height:70px;">
+                <div id="___plus_0" style="text-indent: 0px; margin: 0px; padding: 0px; background: transparent; border-style: none; float: none; line-height: normal; font-size: 1px; vertical-align: baseline; display: inline-block; width: 58px; height: 65px;"><iframe frameborder="0" hspace="0" marginheight="0" marginwidth="0" scrolling="no" style="position: static; top: 0px; width: 58px; margin: 0px; border-style: none; left: 0px; visibility: visible; height: 65px;" tabindex="0" vspace="0"
+                        width="100%" id="I0_1475031185864" name="I0_1475031185864" src="https://apis.google.com/u/0/se/0/_/+1/sharebutton?plusShare=true&amp;usegapi=1&amp;action=share&amp;annotation=vertical-bubble&amp;height=65&amp;hl=en-US&amp;origin=http%3A%2F%2Fwww.bu.ac.th&amp;url=http%3A%2F%2Fwww.bu.ac.th%2Ftha%2F&amp;gsrc=3p&amp;ic=1&amp;jsh=m%3B%2F_%2Fscs%2Fapps-static%2F_%2Fjs%2Fk%3Doz.gapi.th.zIgBRqcxasA.O%2Fm%3D__features__%2Fam%3DAQ%2Frt%3Dj%2Fd%3D1%2Frs%3DAGLTcCPpOTqb5M30yIALuwxmIq5_Yh7bPw#_methods=onPlusOne%2C_ready%2C_close%2C_open%2C_resizeMe%2C_renderstart%2Concircled%2Cdrefresh%2Cerefresh%2Conload&amp;id=I0_1475031185864&amp;parent=http%3A%2F%2Fwww.bu.ac.th&amp;pfname=&amp;rpctoken=18016886"
+                        data-gapiattached="true" title="+Share"></iframe></div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
