ใส่ URL ลิ้งหน้าที่ทำแล้ว

--- a/_layouts/ffc-layouts.html
+++ b/_layouts/ffc-layouts.html
@@ -23,28 +23,26 @@
 <body>
     <header>
         <div style="background-color:#66FF66;color:white;padding:20px;">
-<center>
-            <table>
-                <tr>
-                    <td>
+            <center>
+                <table>
+                    <tr>
+                        <td>
 
-                        <nav>
-                            <p align="center">
-                                &nbsp; <a href="">FFCคืออะไร</a>
-                                 &nbsp; <a href="#">ใครใช้</a>
-                                 &nbsp; <a href="#">คุณสมบัติ</a>
-                                 &nbsp; <a href="#">FAQ </a>
-                                 &nbsp;<a href="#">ดาวน์โหลด</a>
-                                 &nbsp; <a href="#">ติดต่อ</a>
-                            </p>
-                        </nav>
-                    </td>
-                </tr>
-            </table>
+                            <nav>
+                                <p align="center">
+                                    &nbsp; <a href="https://suppaluck.github.io/about-ffc">FFCคืออะไร</a> &nbsp; <a href="https://suppaluck.github.io/who-ffc">ใครใช้</a> &nbsp; <a href="https://suppaluck.github.io/property-ffc">คุณสมบัติ</a> &nbsp;
+                                    <a href="https://suppaluck.github.io/FAQ-ffc">FAQ </a> &nbsp;
+                                    <a href="#">ดาวน์โหลด</a> &nbsp; <a href="#">ติดต่อ</a>
+                                </p>
+                            </nav>
+                        </td>
+                    </tr>
+                </table>
             </center>
-            <style="background-color:powderblue;">
         </div>
-        </style>
+        <style="background-color:powderblue;">
+
+            </style>
     </header>
 
     <main>
