--- a/_layouts/ffc-layouts.html
+++ b/_layouts/ffc-layouts.html
@@ -3,21 +3,20 @@
 <head>
     <meta charset="utf-8" />
     <title>{{ site.title }}</title>
-    <div style="background-color:#66FF66;color:white;padding:20px;">
+    <div style="background-color:#66FF66;color:white;padding:15px;">
         <table>
             <tr>
-                <td><img src="https://lh3.ggpht.com/OsDaHoxLg9MXmGskclOV6V3592KiFQICLv1Cac2RwIVgrv7q9D43ajfG82HNfY_8Gyw=w300-rw" <alt="FFC.com" width="150" height="142"></td>
                 <td>
-                    <h1 style="color:#6699FF;">FAMILY FOLDER <br>COLLECTOR</br></h1></td>
-
-                <td>
-                    <center>
-                        <p style="color:red;"><b>FFCบริการถึงหน้าบ้าน <span style="color:blue">เข้าถึงทุกครอบครัว</span> <span style="color:green">ดูแลสุขภาพในชุมชน</span></b></p>
+                    <img src="https://lh3.ggpht.com/OsDaHoxLg9MXmGskclOV6V3592KiFQICLv1Cac2RwIVgrv7q9D43ajfG82HNfY_8Gyw=w300-rw" alt="FFC.com" width="150" height="142"></td>
                 </td>
-                </center>
+                <td>
+                    <h1 style="color:#6699FF;">FAMILY FOLDER COLLECTOR</h1>
+                    <p style="color:red;"><b>FFCบริการถึงหน้าบ้าน เข้าถึงทุกครอบครัว ใส่ใจสุขภาพชุมชน</b></p>
+                </td>
             </tr>
         </table>
     </div>
+
 </head>
 
 <body>
@@ -27,7 +26,6 @@
                 <table>
                     <tr>
                         <td>
-
                             <nav>
                                 <p align="center">
                                     &nbsp; <a href="https://suppaluck.github.io/about-ffc">FFCคืออะไร</a> &nbsp; <a href="https://suppaluck.github.io/who-ffc">ใครใช้</a> &nbsp; <a href="https://suppaluck.github.io/property-ffc">คุณสมบัติ</a> &nbsp;
@@ -51,14 +49,18 @@
     <hr>
 
     <footer>
-        <center> <a href=" #">FFCคืออะไร</a> | <a href="#">คำถามที่พบบ่อย</a> | <a href="#">ติดต่อ</a>
-            <br>
-            <p>จำนวนผู้เข้าชมเว็บไซpต์</p>
-            </br>
-            <p>ที่อยู่ </p>
+        <div style="background-color:#66FF66;color:white;padding:15px;">
+            <center> <a href=" #">FFCคืออะไร</a> | <a href="#">คำถามที่พบบ่อย</a> | <a href="#">ติดต่อ</a>
+                <br>
+                <p>จำนวนผู้เข้าชมเว็บไซต์</p>
+                </br>
+                <p>ที่อยู่ </p>
 
-            <p> อาคารศูนย์เทคโนโลยีรอิเล็กทรอนิกส์ (TMEC) </p>
-        </center>
+                <p> อาคารอุทยานวิทยาศาสตร์
+                ศูนย์เทคโนโลยีอิเล็กทรอนิกส์และคอมพิวเตอร์แห่งชาติ
+               <br>112 ถนนพหลโยธิน ตำบลคลองหนึ่ง อำเภอคลองหลวง จังหวัดปทุมธานี 12120
+               <br>โทรศัพท์ 02-564-6900 โทรสาร 02-564-6901-3 </p>
+            </center>
 
     </footer>
 </body>
