ปรับแต่ง header และเพิ่มหน้า ดาวน์โหลดกับติดต่อ

--- a/_layouts/ffc-layouts.html
+++ b/_layouts/ffc-layouts.html
@@ -16,6 +16,32 @@
             </tr>
         </table>
     </div>
+    <style>
+        ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            overflow: hidden;
+            background-color: #66FF66;
+        }
+
+        li {
+            float: left;
+        }
+
+        li a {
+            display: block;
+            color: white;
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;
+        }
+
+        li a:hover {
+            background-color: #66FF33;
+        }
+
+    </style>
 
 </head>
 
@@ -27,16 +53,19 @@
                     <tr>
                         <td>
                             <nav>
-                                <p align="center">
-                                    &nbsp; <a href="https://suppaluck.github.io/about-ffc">FFCคืออะไร</a> &nbsp; <a href="https://suppaluck.github.io/who-ffc">ใครใช้</a> &nbsp; <a href="https://suppaluck.github.io/property-ffc">คุณสมบัติ</a> &nbsp;
-                                    <a href="https://suppaluck.github.io/FAQ-ffc">FAQ </a> &nbsp;
-                                    <a href="#">ดาวน์โหลด</a> &nbsp; <a href="#">ติดต่อ</a>
+                                <ul>
+                                    <li> &nbsp;<b><a href="https://suppaluck.github.io/about-ffc" >FFCคืออะไร</a></li></b>
+                                    <li> &nbsp; <b><a href="https://suppaluck.github.io/who-ffc">ใครใช้</a></li></b>
+                                    <li> &nbsp; <b><a href="https://suppaluck.github.io/property-ffc">คุณสมบัติ</a></li></b>
+                                    <li> &nbsp;<b><a href="https://suppaluck.github.io/FAQ-ffc">FAQ </a></li></b>
+                                    <li> &nbsp;<b><a href="#">ดาวน์โหลด</a> </li></b>
+                                    <li>&nbsp;<b><a href="#">ติดต่อ</a></li></b>
+                                </ul>
                                 </p>
                             </nav>
                         </td>
                     </tr>
                 </table>
-            </center>
         </div>
         <style="background-color:powderblue;">
 
@@ -56,10 +85,9 @@
                 </br>
                 <p>ที่อยู่ </p>
 
-                <p> อาคารอุทยานวิทยาศาสตร์
-                ศูนย์เทคโนโลยีอิเล็กทรอนิกส์และคอมพิวเตอร์แห่งชาติ
-               <br>112 ถนนพหลโยธิน ตำบลคลองหนึ่ง อำเภอคลองหลวง จังหวัดปทุมธานี 12120
-               <br>โทรศัพท์ 02-564-6900 โทรสาร 02-564-6901-3 </p>
+                <p> อาคารอุทยานวิทยาศาสตร์ ศูนย์เทคโนโลยีอิเล็กทรอนิกส์และคอมพิวเตอร์แห่งชาติ
+                    <br>112 ถนนพหลโยธิน ตำบลคลองหนึ่ง อำเภอคลองหลวง จังหวัดปทุมธานี 12120
+                    <br>โทรศัพท์ 02-564-6900 โทรสาร 02-564-6901-3 </p>
             </center>
 
     </footer>
