--- a/_layouts/ffc-layouts.html
+++ b/_layouts/ffc-layouts.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <title>{{ site.title }}</title>
-    <div style="background-color:#66FF66;color:white;padding:15px;">
+    <div style="background-color:#66FF66;color:white;padding:10px;">
         <table>
             <tr>
                 <td>
@@ -11,7 +11,7 @@
                 </td>
                 <td>
                     <h1 style="color:#6699FF;">FAMILY FOLDER COLLECTOR</h1>
-                    <p style="color:red;"><b>FFCบริการถึงหน้าบ้าน เข้าถึงทุกครอบครัว ใส่ใจสุขภาพชุมชน</b></p>
+                    <p style="color:#0033FF;"><b>FFCบริการถึงหน้าบ้าน เข้าถึงทุกครอบครัว ใส่ใจสุขภาพชุมชน</b></p>
                 </td>
             </tr>
         </table>
@@ -41,6 +41,7 @@
             background-color: #66FF33;
         }
 
+        </ul>
     </style>
 
 </head>
@@ -52,24 +53,26 @@
                 <table>
                     <tr>
                         <td>
+
                             <nav>
                                 <ul>
-                                    <li> &nbsp;<b><a href="https://suppaluck.github.io/about-ffc" >FFCคืออะไร</a></li></b>
-                                    <li> &nbsp; <b><a href="https://suppaluck.github.io/who-ffc">ใครใช้</a></li></b>
-                                    <li> &nbsp; <b><a href="https://suppaluck.github.io/property-ffc">คุณสมบัติ</a></li></b>
-                                    <li> &nbsp;<b><a href="https://suppaluck.github.io/FAQ-ffc">FAQ </a></li></b>
-                                    <li> &nbsp;<b><a href="#">ดาวน์โหลด</a> </li></b>
-                                    <li>&nbsp;<b><a href="#">ติดต่อ</a></li></b>
+                                    <li> &nbsp; <b><a href="https://suppaluck.github.io/about-ffc" >FFCคืออะไร</a></li></b>
+                                        <li> &nbsp; <b><a href="https://suppaluck.github.io/who-ffc">ใครใช้</a></li></b>
+                                            <li> &nbsp; <b><a href="https://suppaluck.github.io/property-ffc">คุณสมบัติ</a></b></li>
+                                            <li> &nbsp;<b><a href="https://suppaluck.github.io/FAQ-ffc">FAQ </a></li></b>
+                                                <li> &nbsp;<b><a href="https://suppaluck.github.io/download-ffc.html">ดาวน์โหลด</a> </li></b>
+                                                    <li>&nbsp;<b><a href="https://suppaluck.github.io/contact-ffc.html">ติดต่อ</a></li></b>
                                 </ul>
-                                </p>
+
                             </nav>
                         </td>
                     </tr>
                 </table>
-        </div>
-        <style="background-color:powderblue;">
+            </center>
 
-            </style>
+
+        </div>
+
     </header>
 
     <main>
