แก้ไขหน้า index

--- a/_layouts/default-ffc.html
+++ b/_layouts/default-ffc.html
@@ -29,34 +29,36 @@
                 </td>
             </tr>
         </table>
-      </div>
+    </div>
 
 </head>
+
 <body>
-  <header>
-      <div style="background-color:#66FF66;color:white;padding:10px;">
-    <center>
-        <table>
-            <tr>
-                <td>
-                          <ul class="nav nav-pills">
-                                <li role="presentation" class="disabled"> &nbsp; <b><a href="https://suppaluck.github.io/about-ffc" >FFCคืออะไร</a></li></b>
-                                    <li role="presentation" class="disabled"> &nbsp; <b><a href="https://suppaluck.github.io/who-ffc">ใครใช้</a></li></b>
-                                        <li role="presentation" class="disabled"> &nbsp; <b><a href="https://suppaluck.github.io/property-ffc">คุณสมบัติ</a></b></li>
-                                        <li role="presentation" class="disabled"> &nbsp;<b><a href="https://suppaluck.github.io/FAQ-ffc">FAQ</a></li></b>
-                                            <li role="presentation" class="disabled"> &nbsp;<b><a href="https://suppaluck.github.io/download-ffc.html">ดาวน์โหลด</a> </li></b>
-                                                <li role="presentation" class="disabled">&nbsp;<b><a href="https://suppaluck.github.io/contact-ffc.html">ติดต่อ</a></li></b>
+    <header>
+        <div style="background-color:#66FF66;color:white;padding:10px;">
+            <center>
+                <table>
+                    <tr>
+                        <td>
+
+                            <b><a href="https://suppaluck.github.io/about-ffc" >FFCคืออะไร</a></b> &nbsp; <b><a href="https://suppaluck.github.io/who-ffc">ใครใช้</a></b> &nbsp; <b><a href="https://suppaluck.github.io/property-ffc">คุณสมบัติ</a></b> &nbsp;
+                            <b><a href="https://suppaluck.github.io/FAQ-ffc">FAQ</a></b> &nbsp;
+                            <b><a href="https://suppaluck.github.io/download-ffc.html">ดาวน์โหลด</a></b> &nbsp;
+                            <b><a href="https://suppaluck.github.io/contact-ffc.html">ติดต่อ</a></b>
                             </ul>
-                </td>
-            </tr>
-        </table>
-    </center>
-  </header>
-</div>
-<hr>
+                        </td>
+                    </tr>
+                </table>
+            </center>
+    </header>
+    </div>
+    <hr>
 
     <main>
-        {{ content }}
+        <div class="container">
+
+            {{ content }}
+        </div>
     </main>
     <hr>
 
