--- a/_layouts/default-ffc.html
+++ b/_layouts/default-ffc.html
@@ -10,7 +10,7 @@
  </a>
  </div>
  --->
-    <div style="background-color:#66FF66;color:white;padding:10px;">
+    <div style="background-color: #99e699;color:white;padding:10px;">
         <!-- Latest compiled and minified CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
@@ -21,11 +21,13 @@
         <table>
             <tr>
                 <td>
-                    <img src="https://lh3.ggpht.com/OsDaHoxLg9MXmGskclOV6V3592KiFQICLv1Cac2RwIVgrv7q9D43ajfG82HNfY_8Gyw=w300-rw" alt="FFC.com" width="150" height="142"></td>
+                    <img src="https://lh3.ggpht.com/OsDaHoxLg9MXmGskclOV6V3592KiFQICLv1Cac2RwIVgrv7q9D43ajfG82HNfY_8Gyw=w300-rw" alt="FFC.com" width="130" height="122"></td>
                 </td>
                 <td>
-                    <h1 style="color:#6699FF;">FAMILY FOLDER COLLECTOR</h1>
-                    <p style="color:#0033FF;"><b>FFCบริการถึงหน้าบ้าน เข้าถึงทุกครอบครัว ใส่ใจสุขภาพชุมชน</b></p>
+                    <h2 style="color: #1a1aff;">FAMILY FOLDER COLLECTOR</h2>
+                    <p style="color:#ff1ab3;"><b>FFCบริการถึงหน้าบ้าน เข้าถึงทุกครอบครัว ใส่ใจสุขภาพชุมชน</b></p>
+
+                    
                 </td>
             </tr>
         </table>
@@ -35,24 +37,28 @@
 
 <body>
     <header>
-        <div style="background-color:#66FF66;color:white;padding:10px;">
+        <div style="background-color: #99e699;color:white;padding:10px;">
             <center>
                 <table>
                     <tr>
                         <td>
-
-                            <b><a href="https://suppaluck.github.io/about-ffc" >FFCคืออะไร</a></b> &nbsp; <b><a href="https://suppaluck.github.io/who-ffc">ใครใช้</a></b> &nbsp; <b><a href="https://suppaluck.github.io/property-ffc">คุณสมบัติ</a></b> &nbsp;
-                            <b><a href="https://suppaluck.github.io/FAQ-ffc">FAQ</a></b> &nbsp;
-                            <b><a href="https://suppaluck.github.io/download-ffc.html">ดาวน์โหลด</a></b> &nbsp;
-                            <b><a href="https://suppaluck.github.io/contact-ffc.html">ติดต่อ</a></b>
-                            </ul>
+                            <nav>
+                                <ul class="nav navbar-nav navbar-right">
+                                    <li><a href="https://suppaluck.github.io/about-ffc">FFCคืออะไร</a></li>
+                                    <li><a href="https://suppaluck.github.io/who-ffc">ใครใช้</a></li>
+                                    <li><a href="https://suppaluck.github.io/property-ffc">คุณสมบัติ</a></li>
+                                    <li><a href="https://suppaluck.github.io/FAQ-ffc">FAQ</a></li>
+                                    <li><a href="https://suppaluck.github.io/download-ffc.html">ดาวน์โหลด</a></li>
+                                    <li><a href="https://suppaluck.github.io/contact-ffc.html">ติดต่อ</a></li>
+                                </ul>
+                            </nav>
                         </td>
                     </tr>
                 </table>
             </center>
+
     </header>
-    </div>
-    <hr>
+
 
     <main>
         <div class="container">
@@ -60,10 +66,9 @@
             {{ content }}
         </div>
     </main>
-    <hr>
 
     <footer>
-        <div style="background-color:#66FF66;color:white;padding:15px;">
+        <div style="background-color: #99e699;color:white;padding:15px;">
             <center> <a href=" #">FFCคืออะไร</a> | <a href="#">คำถามที่พบบ่อย</a> | <a href="#">ติดต่อ</a>
                 <br>
                 <p>จำนวนผู้เข้าชมเว็บไซต์</p>
@@ -73,7 +78,9 @@
                 <p> อาคารอุทยานวิทยาศาสตร์ ศูนย์เทคโนโลยีอิเล็กทรอนิกส์และคอมพิวเตอร์แห่งชาติ
                     <br>112 ถนนพหลโยธิน ตำบลคลองหนึ่ง อำเภอคลองหลวง จังหวัดปทุมธานี 12120
                     <br>โทรศัพท์ 02-564-6900 โทรสาร 02-564-6901-3 </p>
-            </center>
+        </div>
+
+        </center>
 
     </footer>
 </body>
