--- a/_layouts/ffc-layouts.html
+++ b/_layouts/ffc-layouts.html
@@ -3,11 +3,28 @@
 <head>
     <meta charset="utf-8" />
     <title>{{ site.title }}</title>
+    <!---
+	<div id="a" style="position:absolute; width:650; height:680; z-index:9999; left:20%; top:120px;">
+<div style=" background-color:#ccc; width:70px; font-family:Tahoma, Geneva, sans-serif; font-size:14px"><a onClick="document.getElementById('a').style.display = 'none';" style="cursor:pointer">&nbsp;[X] Close</a></div>
+ <img src="http://www.bu.ac.th/occasion/prathep_2-Apr-2016/prathep.jpg" width="800" height="499" border="0" align="middle">
+ </a>
+ </div>
+ --->
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <div style="background-color:#66FF66;color:white;padding:10px;">
         <table>
             <tr>
                 <td>
-                    <img src="https://lh3.ggpht.com/OsDaHoxLg9MXmGskclOV6V3592KiFQICLv1Cac2RwIVgrv7q9D43ajfG82HNfY_8Gyw=w300-rw" alt="FFC.com" width="150" height="142"></td>
+                    <a href="https://suppaluck.github.io/index">
+                        <img src="https://lh3.ggpht.com/OsDaHoxLg9MXmGskclOV6V3592KiFQICLv1Cac2RwIVgrv7q9D43ajfG82HNfY_8Gyw=w300-rw" alt="ffc.com" width="150" height="142"></td>
+                </a>
                 </td>
                 <td>
                     <h1 style="color:#6699FF;">FAMILY FOLDER COLLECTOR</h1>
@@ -16,33 +33,6 @@
             </tr>
         </table>
     </div>
-    <style>
-        ul {
-            list-style-type: none;
-            margin: 0;
-            padding: 0;
-            overflow: hidden;
-            background-color: #66FF66;
-        }
-
-        li {
-            float: left;
-        }
-
-        li a {
-            display: block;
-            color: white;
-            text-align: center;
-            padding: 14px 16px;
-            text-decoration: none;
-        }
-
-        li a:hover {
-            background-color: #66FF33;
-        }
-
-        </ul>
-    </style>
 
 </head>
 
@@ -55,16 +45,16 @@
                         <td>
 
                             <nav>
-                                <ul>
-                                    <li> &nbsp; <b><a href="https://suppaluck.github.io/about-ffc" >FFCคืออะไร</a></li></b>
-                                        <li> &nbsp; <b><a href="https://suppaluck.github.io/who-ffc">ใครใช้</a></li></b>
-                                            <li> &nbsp; <b><a href="https://suppaluck.github.io/property-ffc">คุณสมบัติ</a></b></li>
-                                            <li> &nbsp;<b><a href="https://suppaluck.github.io/FAQ-ffc">FAQ </a></li></b>
-                                                <li> &nbsp;<b><a href="https://suppaluck.github.io/download-ffc.html">ดาวน์โหลด</a> </li></b>
-                                                    <li>&nbsp;<b><a href="https://suppaluck.github.io/contact-ffc.html">ติดต่อ</a></li></b>
+                                <ul class="nav nav-pills">
+                                    <li><a href="https://suppaluck.github.io/about-ffc">FFCคืออะไร</a></li>
+                                    <li><a href="https://suppaluck.github.io/who-ffc">ใครใช้</a></li>
+                                    <li><a href="https://suppaluck.github.io/property-ffc">คุณสมบัติ</a></li>
+                                    <li><a href="https://suppaluck.github.io/FAQ-ffc">FAQ </a></li>
+                                    <li><a href="https://suppaluck.github.io/download-ffc.html">ดาวน์โหลด</a></li>
+                                    <li><a href="https://suppaluck.github.io/contact-ffc.html">ติดต่อ</a></li>
                                 </ul>
-
                             </nav>
+
                         </td>
                     </tr>
                 </table>
@@ -76,7 +66,13 @@
     </header>
 
     <main>
-        {{ content }}
+
+        <div class="container">
+
+                {{ content }}
+
+        </div>
+        </center>
     </main>
     <hr>
 
