เพิ่มไอคอนเมนูเพิ่มเติมและเพื่มเติม หน้า index

--- a/_layouts/default-ffc.html
+++ b/_layouts/default-ffc.html
@@ -27,13 +27,24 @@
                     <h2 style="color: #1a1aff;">FAMILY FOLDER COLLECTOR</h2>
                     <p style="color:#ff1ab3;"><b>FFCบริการถึงหน้าบ้าน เข้าถึงทุกครอบครัว ใส่ใจสุขภาพชุมชน</b></p>
 
-                    
+
                 </td>
             </tr>
         </table>
     </div>
 
 </head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+ <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+ <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+ <style>
+ .carousel-inner > .item > img,
+ .carousel-inner > .item > a > img {
+     width: auto;
+     margin: auto;
+ }
+ </style>
 
 <body>
     <header>
