เพิ่มหน้า location message technique และก็สร้าง layouts เพิ่ม แก้ไขหน้า indexเพิ่มเติม

--- a/_layouts/default-ffc.html
+++ b/_layouts/default-ffc.html
@@ -18,56 +18,55 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
         <!-- Latest compiled and minified JavaScript -->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-        <table>
-            <tr>
-                <td>
-                    <img src="https://lh3.ggpht.com/OsDaHoxLg9MXmGskclOV6V3592KiFQICLv1Cac2RwIVgrv7q9D43ajfG82HNfY_8Gyw=w300-rw" alt="FFC.com" width="130" height="122"></td>
-                </td>
-                <td>
-                    <h2 style="color: #1a1aff;">FAMILY FOLDER COLLECTOR</h2>
-                    <p style="color:#ff1ab3;"><b>FFCบริการถึงหน้าบ้าน เข้าถึงทุกครอบครัว ใส่ใจสุขภาพชุมชน</b></p>
-
-
-                </td>
-            </tr>
-        </table>
-    </div>
-
-</head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
- <style>
- .carousel-inner > .item > img,
- .carousel-inner > .item > a > img {
-     width: auto;
-     margin: auto;
- }
- </style>
-
-<body>
-    <header>
-        <div style="background-color: #99e699;color:white;padding:10px;">
-            <center>
+        <div class="row">
+            <div class="col-md-12">
                 <table>
                     <tr>
                         <td>
-                            <nav>
-                                <ul class="nav navbar-nav navbar-right">
-                                    <li><a href="https://suppaluck.github.io/about-ffc">FFCคืออะไร</a></li>
-                                    <li><a href="https://suppaluck.github.io/who-ffc">ใครใช้</a></li>
-                                    <li><a href="https://suppaluck.github.io/property-ffc">คุณสมบัติ</a></li>
-                                    <li><a href="https://suppaluck.github.io/FAQ-ffc">FAQ</a></li>
-                                    <li><a href="https://suppaluck.github.io/download-ffc.html">ดาวน์โหลด</a></li>
-                                    <li><a href="https://suppaluck.github.io/contact-ffc.html">ติดต่อ</a></li>
-                                </ul>
-                            </nav>
+                            <img src="https://lh3.ggpht.com/OsDaHoxLg9MXmGskclOV6V3592KiFQICLv1Cac2RwIVgrv7q9D43ajfG82HNfY_8Gyw=w300-rw" alt="FFC.com" width="125" height="111"></td>
                         </td>
+                        <td>
+                            <h3 style="color:#1a1aff;">FAMILY FOLDER COLLECTOR</h3>
+                            <h6 style="color:#ff1ab3;"><b>FFCบริการถึงหน้าบ้าน เข้าถึงทุกครอบครัว ใส่ใจสุขภาพชุมชน</b></h6>
+
+                        </td>
+                        <td>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; </td>
+                        <center>
+                            <td>
+
+                                <nav>
+                                    <ul class="nav navbar-nav navbar-right">
+                                        <li><a href="https://suppaluck.github.io/about-ffc">FFCคืออะไร</a></li>
+                                        <li><a href="https://suppaluck.github.io/who-ffc">ใครใช้</a></li>
+                                        <li><a href="https://suppaluck.github.io/property-ffc">คุณสมบัติ</a></li>
+                                        <li><a href="https://suppaluck.github.io/FAQ-ffc">FAQ</a></li>
+                                        <li><a href="https://suppaluck.github.io/download-ffc.html">ดาวน์โหลด</a></li>
+                                        <li><a href="https://suppaluck.github.io/contact-ffc.html">ติดต่อ</a></li>
+                                    </ul>
+                                </nav>
+                            </td>
+                        </center>
                     </tr>
                 </table>
-            </center>
+            </div>
+        </div>
+</head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<style>
+    .carousel-inner>.item>img,
+    .carousel-inner>.item>a>img {
+        width: auto;
+        margin: auto;
+    }
+</style>
 
+<body>
+    <header>
+        <br>
+        </div>
     </header>
 
 
