แก้ไขและเพิ่มข้อมูลหน้าต่างๆ

--- a/_layouts/icon-ffc-layouts.html
+++ b/_layouts/icon-ffc-layouts.html
@@ -32,7 +32,7 @@
                             <h3 style="color:#6699FF;">FAMILY FOLDER COLLECTOR</h3>
                             <h6 style="color:#0033FF;"><b>FFCบริการถึงหน้าบ้าน เข้าถึงทุกครอบครัว ใส่ใจสุขภาพชุมชน</b></h6>
                         </td>
-                        <td> &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;              </td>
+                        <td> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; </td>
                         <td>
                           <nav>
                               <ul class="nav navbar-nav navbar-right">
@@ -54,7 +54,7 @@
 
 <body>
     <header>
-
+</div>
     </header>
     <main>
 
