--- a/_layouts/ffc-layouts.html
+++ b/_layouts/ffc-layouts.html
@@ -23,12 +23,27 @@
             <tr>
                 <td>
                     <a href="https://suppaluck.github.io/index">
-                        <img src="https://lh3.ggpht.com/OsDaHoxLg9MXmGskclOV6V3592KiFQICLv1Cac2RwIVgrv7q9D43ajfG82HNfY_8Gyw=w300-rw" alt="ffc.com" width="150" height="142"></td>
+                        <img src="https://lh3.ggpht.com/OsDaHoxLg9MXmGskclOV6V3592KiFQICLv1Cac2RwIVgrv7q9D43ajfG82HNfY_8Gyw=w300-rw" alt="ffc.com" width="125" height="110"></td>
                 </a>
                 </td>
                 <td>
-                    <h1 style="color:#6699FF;">FAMILY FOLDER COLLECTOR</h1>
-                    <p style="color:#0033FF;"><b>FFCบริการถึงหน้าบ้าน เข้าถึงทุกครอบครัว ใส่ใจสุขภาพชุมชน</b></p>
+                    <h3 style="color:#6699FF;">FAMILY FOLDER COLLECTOR</h3>
+                    <h6 style="color:#0033FF;"><b>FFCบริการถึงหน้าบ้าน เข้าถึงทุกครอบครัว ใส่ใจสุขภาพชุมชน</b></h6>
+                </td>
+                <td> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; </td>
+                <td>
+
+                    <nav>
+                        <ul class="nav nav-pills">
+                            <li><a href="https://suppaluck.github.io/about-ffc">FFCคืออะไร</a></li>
+                            <li><a href="https://suppaluck.github.io/who-ffc">ใครใช้</a></li>
+                            <li><a href="https://suppaluck.github.io/property-ffc">คุณสมบัติ</a></li>
+                            <li><a href="https://suppaluck.github.io/FAQ-ffc">FAQ </a></li>
+                            <li><a href="https://suppaluck.github.io/download-ffc.html">ดาวน์โหลด</a></li>
+                            <li><a href="https://suppaluck.github.io/contact-ffc.html">ติดต่อ</a></li>
+                        </ul>
+                    </nav>
+
                 </td>
             </tr>
         </table>
@@ -40,24 +55,7 @@
     <header>
         <div style="background-color:#66FF66;color:white;padding:20px;">
             <center>
-                <table>
-                    <tr>
-                        <td>
 
-                            <nav>
-                                <ul class="nav nav-pills">
-                                    <li><a href="https://suppaluck.github.io/about-ffc">FFCคืออะไร</a></li>
-                                    <li><a href="https://suppaluck.github.io/who-ffc">ใครใช้</a></li>
-                                    <li><a href="https://suppaluck.github.io/property-ffc">คุณสมบัติ</a></li>
-                                    <li><a href="https://suppaluck.github.io/FAQ-ffc">FAQ </a></li>
-                                    <li><a href="https://suppaluck.github.io/download-ffc.html">ดาวน์โหลด</a></li>
-                                    <li><a href="https://suppaluck.github.io/contact-ffc.html">ติดต่อ</a></li>
-                                </ul>
-                            </nav>
-
-                        </td>
-                    </tr>
-                </table>
             </center>
 
 
@@ -69,7 +67,7 @@
 
         <div class="container">
 
-                {{ content }}
+            {{ content }}
 
         </div>
         </center>
