--- a/_layouts/default-ffc.html
+++ b/_layouts/default-ffc.html
@@ -77,7 +77,7 @@
     </main>
 
     <footer>
-        <div style="background-color: #99e699;color:white;padding:15px;">
+        <div style="background-color: #99e699;color:#000000;padding:15px;">
             <center> <a href=" #">FFCคืออะไร</a> | <a href="#">คำถามที่พบบ่อย</a> | <a href="#">ติดต่อ</a>
                 <br>
                 <p>จำนวนผู้เข้าชมเว็บไซต์</p>
