แก้ไขโครงสร้างหน้าหลักใหม่

--- a/_layouts/ffc-layouts.html
+++ b/_layouts/ffc-layouts.html
@@ -53,13 +53,7 @@
 
 <body>
     <header>
-        <div style="background-color:#66FF66;color:white;padding:20px;">
-            <center>
-
-            </center>
-
-
-        </div>
+        
 
     </header>
 
@@ -70,13 +64,13 @@
             {{ content }}
 
         </div>
-        </center>
+
     </main>
     <hr>
 
     <footer>
         <div style="background-color:#66FF66;color:white;padding:15px;">
-            <center> <a href=" #">FFCคืออะไร</a> | <a href="#">คำถามที่พบบ่อย</a> | <a href="#">ติดต่อ</a>
+            <center> <a href="https://suppaluck.github.io/about-ffc">FFCคืออะไร</a> | <a href="https://suppaluck.github.io/FAQ-ffc">คำถามที่พบบ่อย</a> | <a href="https://suppaluck.github.io/contact-ffc.html">ติดต่อ</a>
                 <br>
                 <p>จำนวนผู้เข้าชมเว็บไซต์</p>
                 </br>
