--- a/_layouts/default-ffc.html
+++ b/_layouts/default-ffc.html
@@ -10,7 +10,7 @@
  </a>
  </div>
  --->
-    <div style="background-color: #99e699;color:white;padding:10px;">
+    <div style="background-color:#99e699;color:white;">
         <!-- Latest compiled and minified CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
@@ -22,29 +22,35 @@
             <div class="col-md-12">
                 <table>
                     <tr>
-                        <td>
-                            <img src="https://lh3.ggpht.com/OsDaHoxLg9MXmGskclOV6V3592KiFQICLv1Cac2RwIVgrv7q9D43ajfG82HNfY_8Gyw=w300-rw" alt="FFC.com" width="125" height="111"></td>
-                        </td>
-                        <td>
-                            <h3 style="color:#1a1aff;">FAMILY FOLDER COLLECTOR</h3>
-                            <h6 style="color:#ff1ab3;"><b>FFCบริการถึงหน้าบ้าน เข้าถึงทุกครอบครัว ใส่ใจสุขภาพชุมชน</b></h6>
-
-                        </td>
                         <td>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; </td>
-                        <center>
-                            <td>
-                                <nav>
-                                    <ul class="nav navbar-nav navbar-right">
-                                        <li><a href="https://suppaluck.github.io/about-ffc">FFCคืออะไร</a></li>
-                                        <li><a href="https://suppaluck.github.io/who-ffc">ใครใช้</a></li>
-                                        <li><a href="https://suppaluck.github.io/property-ffc">คุณสมบัติ</a></li>
-                                        <li><a href="https://suppaluck.github.io/FAQ-ffc">FAQ</a></li>
-                                        <li><a href="https://suppaluck.github.io/download-ffc.html">ดาวน์โหลด</a></li>
-                                        <li><a href="https://suppaluck.github.io/contact-ffc.html">ติดต่อ</a></li>
-                                    </ul>
-                                </nav>
-                            </td>
-                        </center>
+                        <td>
+                            <img src="https://lh3.ggpht.com/OsDaHoxLg9MXmGskclOV6V3592KiFQICLv1Cac2RwIVgrv7q9D43ajfG82HNfY_8Gyw=w300-rw" alt="FFC.com" width="70" height="60"></td>
+                        </td>
+                        <td>
+                            <h4>Family Folder Collector</h4>
+                            <td>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; </td>
+                            <td>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; </td>
+                            <td>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; </td>
+                            <td>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; </td>
+
+                            <center>
+                                <td>
+                                  <nav>
+
+                                      <ul class="nav nav-pills navbar-righ">
+
+                                          <li><a href="https://suppaluck.github.io/about-ffc">FFCคืออะไร</a></li>
+                                          <li><a href="https://suppaluck.github.io/who-ffc">ใครใช้</a></li>
+                                          <li><a href="https://suppaluck.github.io/property-ffc">คุณสมบัติ</a></li>
+                                          <li><a href="https://suppaluck.github.io/FAQ-ffc">FAQ </a></li>
+                                          <li><a href="https://suppaluck.github.io/download-ffc.html">ดาวน์โหลด</a></li>
+                                          <li><a href="https://suppaluck.github.io/contact-ffc.html">ติดต่อ</a></li>
+                                      </ul>
+                                  </nav>
+
+
+                                </td>
+                            </center>
                     </tr>
                 </table>
             </div>
@@ -60,6 +66,35 @@
         width: auto;
         margin: auto;
     }
+    element.style {
+}
+.content-section-a {
+    padding: 90px 0;
+}
+.trb-survey-bg {
+    background-position: left bottom;
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-image: url(../img/bg.jpg);
+    background-color: #66FF66;
+}
+
+.lead {
+    margin-bottom: 30px;
+    font-family: rsu-light;
+    font-size: 1.2em;
+    line-height: 1.46428571;
+    font-weight: 300;
+}
+.trb-report-bg {
+    background-image:url(../img/White.jpg);
+}
+
+.content-section-b {
+}
+.trb-showe-bg {
+    background-color:#66ffb3;
+  }
 </style>
 
 <body>
@@ -70,10 +105,10 @@
 
 
     <main>
-        <div class="container">
 
-            {{ content }}
-        </div>
+
+        {{ content }}
+
     </main>
 
     <footer>
