--- a/_layouts/default-ffc.html
+++ b/_layouts/default-ffc.html
@@ -10,7 +10,7 @@
  </a>
  </div>
  --->
-    <div style="background-color:#99e699;color:white;">
+    <div style="background-color:White;color:white;">
         <!-- Latest compiled and minified CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
@@ -35,18 +35,18 @@
 
                             <center>
                                 <td>
-                                  <nav>
+                                    <nav>
 
-                                      <ul class="nav nav-pills navbar-righ">
+                                        <ul class="nav nav-pills navbar-righ">
 
-                                          <li><a href="https://suppaluck.github.io/about-ffc">FFCคืออะไร</a></li>
-                                          <li><a href="https://suppaluck.github.io/who-ffc">ใครใช้</a></li>
-                                          <li><a href="https://suppaluck.github.io/property-ffc">คุณสมบัติ</a></li>
-                                          <li><a href="https://suppaluck.github.io/FAQ-ffc">FAQ </a></li>
-                                          <li><a href="https://suppaluck.github.io/download-ffc.html">ดาวน์โหลด</a></li>
-                                          <li><a href="https://suppaluck.github.io/contact-ffc.html">ติดต่อ</a></li>
-                                      </ul>
-                                  </nav>
+                                            <li><a href="https://suppaluck.github.io/about-ffc">FFCคืออะไร</a></li>
+                                            <li><a href="https://suppaluck.github.io/who-ffc">ใครใช้</a></li>
+                                            <li><a href="https://suppaluck.github.io/property-ffc">คุณสมบัติ</a></li>
+                                            <li><a href="https://suppaluck.github.io/FAQ-ffc">FAQ </a></li>
+                                            <li><a href="https://suppaluck.github.io/download-ffc.html">ดาวน์โหลด</a></li>
+                                            <li><a href="https://suppaluck.github.io/contact-ffc.html">ติดต่อ</a></li>
+                                        </ul>
+                                    </nav>
 
 
                                 </td>
@@ -66,35 +66,42 @@
         width: auto;
         margin: auto;
     }
-    element.style {
-}
-.content-section-a {
-    padding: 90px 0;
-}
-.trb-survey-bg {
-    background-position: left bottom;
-    background-size: 100%;
-    background-repeat: no-repeat;
-    background-image: url(../img/bg.jpg);
-    background-color: #66FF66;
-}
 
-.lead {
-    margin-bottom: 30px;
-    font-family: rsu-light;
-    font-size: 1.2em;
-    line-height: 1.46428571;
-    font-weight: 300;
-}
-.trb-report-bg {
-    background-image:url(../img/White.jpg);
-}
+    element.style {}
 
-.content-section-b {
-}
-.trb-showe-bg {
-    background-color:#66ffb3;
-  }
+    .content-section-a {
+        padding: 90px 0;
+    }
+
+    .trb-survey-bg {
+        background-position: left bottom;
+        background-size: 100%;
+        background-repeat: no-repeat;
+        background-image: url(../img/bg.jpg);
+        background-color: #66FF66;
+    }
+
+    .lead {
+        margin-bottom: 30px;
+        font-family: rsu-light;
+        font-size: 1.2em;
+        line-height: 1.46428571;
+        font-weight: 300;
+    }
+
+    .trb-report-bg {
+        background-image: url(../img/White.jpg);
+    }
+
+    .content-section-b {}
+
+    .trb-showe-bg {
+        background-color: #33ff77;
+    }
+
+    .trb-video-bg {
+        background-color: #e6ffe6;
+    }
 </style>
 
 <body>
@@ -112,19 +119,31 @@
     </main>
 
     <footer>
-        <div style="background-color: #99e699;color:#000000;padding:15px;">
-            <center> <a href=" #">FFCคืออะไร</a> | <a href="#">คำถามที่พบบ่อย</a> | <a href="#">ติดต่อ</a>
-                <br>
-                <p>จำนวนผู้เข้าชมเว็บไซต์</p>
-                </br>
-                <p>ที่อยู่ </p>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-6 wow fadeInLeftBig animated animated" style="visibility: visible; animation-name: fadeInLeftBig;">
 
-                <p> อาคารอุทยานวิทยาศาสตร์ ศูนย์เทคโนโลยีอิเล็กทรอนิกส์และคอมพิวเตอร์แห่งชาติ
-                    <br>112 ถนนพหลโยธิน ตำบลคลองหนึ่ง อำเภอคลองหลวง จังหวัดปทุมธานี 12120
-                    <br>โทรศัพท์ 02-564-6900 โทรสาร 02-564-6901-3 </p>
-        </div>
+                    
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-sm-6 wow fadeInLeftBig animated animated" style="visibility: visible; animation-name: fadeInLeftBig;">
+                                    <div style="background-color:White; color:#000000;padding:15px;">
+                                        <center> <a href=" #">FFCคืออะไร</a> | <a href="#">คำถามที่พบบ่อย</a> | <a href="#">ติดต่อ</a>
+                                            <br>
+                                            <p>จำนวนผู้เข้าชมเว็บไซต์</p>
+                                            </br>
+                                            <p>ที่อยู่ </p>
 
-        </center>
+                                            <p> อาคารอุทยานวิทยาศาสตร์ ศูนย์เทคโนโลยีอิเล็กทรอนิกส์และคอมพิวเตอร์แห่งชาติ
+                                                <br>112 ถนนพหลโยธิน ตำบลคลองหนึ่ง อำเภอคลองหลวง จังหวัดปทุมธานี 12120
+                                                <br>โทรศัพท์ 02-564-6900 โทรสาร 02-564-6901-3 </p>
+                                    </div>
+                                  </div>
+                                </div>
+                              </div>
+
+
+                                    </center>
 
     </footer>
 </body>
