--- a/_layouts/ffc-layouts.html
+++ b/_layouts/ffc-layouts.html
@@ -10,67 +10,112 @@
  </a>
  </div>
  --->
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <div style="background-color:White;color:white;">
+        <!-- Latest compiled and minified CSS -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
-    <!-- Optional theme -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+        <!-- Optional theme -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+        <!-- Latest compiled and minified JavaScript -->
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+        <div class="row">
+            <div class="col-md-12">
+                <table>
+                    <tr>
+                        <td>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; </td>
+                        <td>
+                            <img src="https://lh3.ggpht.com/OsDaHoxLg9MXmGskclOV6V3592KiFQICLv1Cac2RwIVgrv7q9D43ajfG82HNfY_8Gyw=w300-rw" alt="FFC.com" width="70" height="60"></td>
+                        </td>
+                        <td>
+                            <h4>Family Folder Collector</h4>
+                            <td>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; </td>
+                            <td>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; </td>
+                            <td>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; </td>
+                            <td>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; </td>
 
-    <!-- Latest compiled and minified JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-    <div style="background-color:#66FF66;color:white;padding:10px;">
-        <table>
-            <tr>
-                <td>
-                    <a href="https://suppaluck.github.io/index">
-                        <img src="https://lh3.ggpht.com/OsDaHoxLg9MXmGskclOV6V3592KiFQICLv1Cac2RwIVgrv7q9D43ajfG82HNfY_8Gyw=w300-rw" alt="ffc.com" width="125" height="110"></td>
-                </a>
-                </td>
-                <td>
-                    <h3 style="color:#6699FF;">FAMILY FOLDER COLLECTOR</h3>
-                    <h6 style="color:#0033FF;"><b>FFCบริการถึงหน้าบ้าน เข้าถึงทุกครอบครัว ใส่ใจสุขภาพชุมชน</b></h6>
-                </td>
-                <td> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; </td>
-                <td>
+                            <center>
+                                <td>
+                                  <nav>
 
-                    <nav>
-                        <ul class="nav nav-pills">
-                            <li><a href="https://suppaluck.github.io/about-ffc">FFCคืออะไร</a></li>
-                            <li><a href="https://suppaluck.github.io/who-ffc">ใครใช้</a></li>
-                            <li><a href="https://suppaluck.github.io/property-ffc">คุณสมบัติ</a></li>
-                            <li><a href="https://suppaluck.github.io/FAQ-ffc">FAQ </a></li>
-                            <li><a href="https://suppaluck.github.io/download-ffc.html">ดาวน์โหลด</a></li>
-                            <li><a href="https://suppaluck.github.io/contact-ffc.html">ติดต่อ</a></li>
-                        </ul>
-                    </nav>
+                                      <ul class="nav nav-pills navbar-righ">
 
-                </td>
-            </tr>
-        </table>
-    </div>
+                                          <li><a href="https://suppaluck.github.io/about-ffc">FFCคืออะไร</a></li>
+                                          <li><a href="https://suppaluck.github.io/who-ffc">ใครใช้</a></li>
+                                          <li><a href="https://suppaluck.github.io/property-ffc">คุณสมบัติ</a></li>
+                                          <li><a href="https://suppaluck.github.io/FAQ-ffc">FAQ </a></li>
+                                          <li><a href="https://suppaluck.github.io/download-ffc.html">ดาวน์โหลด</a></li>
+                                          <li><a href="https://suppaluck.github.io/contact-ffc.html">ติดต่อ</a></li>
+                                      </ul>
+                                  </nav>
 
+
+                                </td>
+                            </center>
+                    </tr>
+                </table>
+            </div>
+        </div>
 </head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<style>
+    .carousel-inner>.item>img,
+    .carousel-inner>.item>a>img {
+        width: auto;
+        margin: auto;
+    }
+    element.style {
+}
+.content-section-a {
+    padding: 90px 0;
+}
+.trb-survey-bg {
+    background-position: left bottom;
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-image: url(../img/bg.jpg);
+    background-color: #66FF66;
+}
+
+.lead {
+    margin-bottom: 30px;
+    font-family: rsu-light;
+    font-size: 1.2em;
+    line-height: 1.46428571;
+    font-weight: 300;
+}
+.trb-report-bg {
+    background-image:url(../img/White.jpg);
+}
+
+.content-section-b {
+}
+.trb-showe-bg {
+    background-color:#e6ffe6;
+  }
+</style>
 
 <body>
     <header>
-        
-
+        <br>
+        </div>
     </header>
+
 
     <main>
 
-        <div class="container">
 
-            {{ content }}
-
-        </div>
+        {{ content }}
 
     </main>
-    <hr>
 
     <footer>
-        <div style="background-color:#66FF66;color:white;padding:15px;">
-            <center> <a href="https://suppaluck.github.io/about-ffc">FFCคืออะไร</a> | <a href="https://suppaluck.github.io/FAQ-ffc">คำถามที่พบบ่อย</a> | <a href="https://suppaluck.github.io/contact-ffc.html">ติดต่อ</a>
+      <div class="row white">
+          <div class="col-md-6">
+        <div style="background-color:White; color:#000000;padding:15px;">
+            <center> <a href=" #">FFCคืออะไร</a> | <a href="#">คำถามที่พบบ่อย</a> | <a href="#">ติดต่อ</a>
                 <br>
                 <p>จำนวนผู้เข้าชมเว็บไซต์</p>
                 </br>
@@ -79,7 +124,9 @@
                 <p> อาคารอุทยานวิทยาศาสตร์ ศูนย์เทคโนโลยีอิเล็กทรอนิกส์และคอมพิวเตอร์แห่งชาติ
                     <br>112 ถนนพหลโยธิน ตำบลคลองหนึ่ง อำเภอคลองหลวง จังหวัดปทุมธานี 12120
                     <br>โทรศัพท์ 02-564-6900 โทรสาร 02-564-6901-3 </p>
-            </center>
+        </div>
+
+        </center>
 
     </footer>
 </body>
