--- a/_layouts/default-ffc.html
+++ b/_layouts/default-ffc.html
@@ -96,7 +96,7 @@
     .content-section-b {}
 
     .trb-showe-bg {
-        background-color: #33ff77;
+        background-color:	 #99cc00;
     }
 
     .trb-video-bg {
@@ -123,7 +123,7 @@
             <div class="row">
                 <div class="col-sm-6 wow fadeInLeftBig animated animated" style="visibility: visible; animation-name: fadeInLeftBig;">
 
-                    
+
                         <div class="container">
                             <div class="row">
                                 <div class="col-sm-6 wow fadeInLeftBig animated animated" style="visibility: visible; animation-name: fadeInLeftBig;">
