--- a/_layouts/ffc-layouts.html
+++ b/_layouts/ffc-layouts.html
@@ -10,7 +10,7 @@
  </a>
  </div>
  --->
-    <div style="background-color:White;color:white;">
+    <div style="background-color:#aaff80;color:white;">
         <!-- Latest compiled and minified CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
@@ -24,7 +24,9 @@
                     <tr>
                         <td>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; </td>
                         <td>
-                            <img src="https://lh3.ggpht.com/OsDaHoxLg9MXmGskclOV6V3592KiFQICLv1Cac2RwIVgrv7q9D43ajfG82HNfY_8Gyw=w300-rw" alt="FFC.com" width="70" height="60"></td>
+                            <a href=" https://suppaluck.github.io/index">
+                                <img src="https://lh3.ggpht.com/OsDaHoxLg9MXmGskclOV6V3592KiFQICLv1Cac2RwIVgrv7q9D43ajfG82HNfY_8Gyw=w300-rw" alt="FFC.com" width="70" height="60"></td>
+                        </a>
                         </td>
                         <td>
                             <h4>Family Folder Collector</h4>
@@ -35,18 +37,18 @@
 
                             <center>
                                 <td>
-                                  <nav>
+                                    <nav>
 
-                                      <ul class="nav nav-pills navbar-righ">
+                                        <ul class="nav nav-pills navbar-righ">
 
-                                          <li><a href="https://suppaluck.github.io/about-ffc">FFCคืออะไร</a></li>
-                                          <li><a href="https://suppaluck.github.io/who-ffc">ใครใช้</a></li>
-                                          <li><a href="https://suppaluck.github.io/property-ffc">คุณสมบัติ</a></li>
-                                          <li><a href="https://suppaluck.github.io/FAQ-ffc">FAQ </a></li>
-                                          <li><a href="https://suppaluck.github.io/download-ffc.html">ดาวน์โหลด</a></li>
-                                          <li><a href="https://suppaluck.github.io/contact-ffc.html">ติดต่อ</a></li>
-                                      </ul>
-                                  </nav>
+                                            <li><a href="https://suppaluck.github.io/about-ffc">FFCคืออะไร</a></li>
+                                            <li><a href="https://suppaluck.github.io/who-ffc">ใครใช้</a></li>
+                                            <li><a href="https://suppaluck.github.io/property-ffc">คุณสมบัติ</a></li>
+                                            <li><a href="https://suppaluck.github.io/FAQ-ffc">FAQ </a></li>
+                                            <li><a href="https://suppaluck.github.io/download-ffc.html">ดาวน์โหลด</a></li>
+                                            <li><a href="https://suppaluck.github.io/contact-ffc.html">ติดต่อ</a></li>
+                                        </ul>
+                                    </nav>
 
 
                                 </td>
@@ -60,42 +62,6 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<style>
-    .carousel-inner>.item>img,
-    .carousel-inner>.item>a>img {
-        width: auto;
-        margin: auto;
-    }
-    element.style {
-}
-.content-section-a {
-    padding: 90px 0;
-}
-.trb-survey-bg {
-    background-position: left bottom;
-    background-size: 100%;
-    background-repeat: no-repeat;
-    background-image: url(../img/bg.jpg);
-    background-color: #66FF66;
-}
-
-.lead {
-    margin-bottom: 30px;
-    font-family: rsu-light;
-    font-size: 1.2em;
-    line-height: 1.46428571;
-    font-weight: 300;
-}
-.trb-report-bg {
-    background-image:url(../img/White.jpg);
-}
-
-.content-section-b {
-}
-.trb-showe-bg {
-    background-color:#e6ffe6;
-  }
-</style>
 
 <body>
     <header>
@@ -105,16 +71,15 @@
 
 
     <main>
+        <div class="container">
 
-
-        {{ content }}
-
+            {{ content }}
+        </div>
     </main>
 
     <footer>
-      <div class="row white">
-          <div class="col-md-6">
-        <div style="background-color:White; color:#000000;padding:15px;">
+
+        <div style="background-color:#aaff80; color:#000000;padding:15px;">
             <center> <a href=" #">FFCคืออะไร</a> | <a href="#">คำถามที่พบบ่อย</a> | <a href="#">ติดต่อ</a>
                 <br>
                 <p>จำนวนผู้เข้าชมเว็บไซต์</p>
