--- a/_layouts/icon-ffc-layouts.html
+++ b/_layouts/icon-ffc-layouts.html
@@ -18,7 +18,7 @@
 
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-    <div style="background-color:#66FF66;color:white;padding:10px;">
+    <div style="background-color:#aaff80;color:white;padding:10px;">
         <div class="row">
             <div class="col-md-12">
                 <table>
