แก้ไขเพิ่มเติมหน้าหลัก

--- a/_layouts/default-ffc.html
+++ b/_layouts/default-ffc.html
@@ -78,7 +78,7 @@
         background-size: 100%;
         background-repeat: no-repeat;
         background-image: url(../img/bg.jpg);
-        background-color: #66FF66;
+        background-color: #b8b894;
     }
 
     .lead {
@@ -96,14 +96,24 @@
     .content-section-b {}
 
     .trb-showe-bg {
-        background-color:	 #99cc00;
+        background-color: #b8b894;
     }
 
     .trb-video-bg {
         background-color: #e6ffe6;
     }
-</style>
 
+td[Attributes Style] {
+    width: 244px;
+    height: 186px;
+    vertical-align: top;
+}
+user agent stylesheet
+td, th {
+    display: table-cell;
+    vertical-align: inherit;
+}
+</style>
 <body>
     <header>
         <br>
@@ -119,31 +129,33 @@
     </main>
 
     <footer>
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-6 wow fadeInLeftBig animated animated" style="visibility: visible; animation-name: fadeInLeftBig;">
+      <div class="container">
+      <div class="row">
+          <div class="col-md-12">
+            <center>
+                            <a href="https://www.facebook.com/FFC.NECTEC/?fref=ts" target="_blank"><img src="/img/fb1.png" alt="FFC.com" width="50" height="50"></a>
+
+                            <a href="http://www.youtube.com/user/RSUClub/featured" target="_blank"><img src="/img/youtube.png" alt="FFC.com" width="60" height="60"></a>
+
+                            <a href="http://plus.google.com/b/107779432983678391773/107779432983678391773/posts" target="_blank"><img src="/img/ig.png"alt="FFC.com" width="50" height="50"></a>
+</center>
+        <div style="background-color:White; color:#000000;padding:15px;">
+            <center> <a href=" #">FFCคืออะไร</a> | <a href="#">คำถามที่พบบ่อย</a> | <a href="#">ติดต่อ</a>
+                <br>
+                <p>จำนวนผู้เข้าชมเว็บไซต์</p>
+                </br>
+                <p>ที่อยู่ </p>
+
+                <p> อาคารอุทยานวิทยาศาสตร์ ศูนย์เทคโนโลยีอิเล็กทรอนิกส์และคอมพิวเตอร์แห่งชาติ
+                    <br>112 ถนนพหลโยธิน ตำบลคลองหนึ่ง อำเภอคลองหลวง จังหวัดปทุมธานี 12120
+                    <br>โทรศัพท์ 02-564-6900 โทรสาร 02-564-6901-3 </p>
+        </div>
+        </div>
+        </div>
+        </div>
 
 
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-sm-6 wow fadeInLeftBig animated animated" style="visibility: visible; animation-name: fadeInLeftBig;">
-                                    <div style="background-color:White; color:#000000;padding:15px;">
-                                        <center> <a href=" #">FFCคืออะไร</a> | <a href="#">คำถามที่พบบ่อย</a> | <a href="#">ติดต่อ</a>
-                                            <br>
-                                            <p>จำนวนผู้เข้าชมเว็บไซต์</p>
-                                            </br>
-                                            <p>ที่อยู่ </p>
-
-                                            <p> อาคารอุทยานวิทยาศาสตร์ ศูนย์เทคโนโลยีอิเล็กทรอนิกส์และคอมพิวเตอร์แห่งชาติ
-                                                <br>112 ถนนพหลโยธิน ตำบลคลองหนึ่ง อำเภอคลองหลวง จังหวัดปทุมธานี 12120
-                                                <br>โทรศัพท์ 02-564-6900 โทรสาร 02-564-6901-3 </p>
-                                    </div>
-                                  </div>
-                                </div>
-                              </div>
-
-
-                                    </center>
+        </center>
 
     </footer>
 </body>
