แก้ไขหน้า FAQ และก็หน้าดาวน์โหลด

--- a/_layouts/default-ffc.html
+++ b/_layouts/default-ffc.html
@@ -100,7 +100,7 @@
     }
 
     .trb-video-bg {
-        background-color: #e6ffe6;
+        background-color:#d9ffb3;
     }
 
 td[Attributes Style] {
