--- a/_layouts/ffc-layouts.html
+++ b/_layouts/ffc-layouts.html
@@ -10,7 +10,7 @@
  </a>
  </div>
  --->
-    <div style="background-color:#aaff80;color:white;">
+    <div style="background-color:white;color:white;">
         <!-- Latest compiled and minified CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
@@ -71,15 +71,17 @@
 
 
     <main>
+      <div style="background-color:#d9ffb3; color:#000000;padding:15px;">
         <div class="container">
 
             {{ content }}
         </div>
+      </div>
     </main>
 
     <footer>
 
-        <div style="background-color:#aaff80; color:#000000;padding:15px;">
+        <div style="background-color:white; color:#000000;padding:15px;">
             <center> <a href=" #">FFCคืออะไร</a> | <a href="#">คำถามที่พบบ่อย</a> | <a href="#">ติดต่อ</a>
                 <br>
                 <p>จำนวนผู้เข้าชมเว็บไซต์</p>
